--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,3 +1,8 @@
-<p>
-signup works!
-</p>
+<section>
+  <mat-form-field>
+    <input 
+    type="email"
+    matInput
+    placeholder="Your email">
+  </mat-form-field>
+</section>
