--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,8 +1,17 @@
 <section>
-  <mat-form-field>
-    <input 
-    type="email"
-    matInput
-    placeholder="Your email">
-  </mat-form-field>
+  <form fxLayout='column' fxLayoutAlign='center center'>
+    <mat-form-field>
+      <input 
+      type="email"
+      matInput
+      placeholder="email">
+    </mat-form-field>
+
+    <mat-form-field>
+      <input 
+      type="password"
+      matInput
+      placeholder="password">
+    </mat-form-field>
+  </form>
 </section>
