--- a/src/styles.css
+++ b/src/styles.css
@@ -8,6 +8,7 @@ html, body {
 body {
   background: linear-gradient(0deg, #84B09D, #C7C7A9);
   background-attachment: fixed;
+  margin: 0
 }
 
 input {
