--- a/src/styles.css
+++ b/src/styles.css
@@ -4,11 +4,12 @@
 html, body {
     font-family: 'Titillium Web', sans-serif;
     text-align: center;
+    height: 100%;
 }
 body {
   background: linear-gradient(0deg, #84B09D, #C7C7A9);
   background-attachment: fixed;
-  margin: 0
+  margin: 0;
 }
 
 input {
