--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -13,11 +13,17 @@ a {
 
 a:hover,
 a:active {
-  color: lightgrey
+  color: lightgray;
+  cursor: pointer;
 }
 
 .navigation-items {
   list-style: none;
   padding: 0;
   margin: 0;
+}
+
+.nav-caption {
+  display: inline-block;
+  padding-left: 6px;
 }
