--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,12 +2,31 @@
   <mat-sidenav
   #sidenav
   role="navigation">
-    <p>I'm the sidenav!</p>
+    <mat-nav-list>
+
+      <a mat-list-item routerLink="/signup" (click)="sidenav.close()">
+        <mat-icon>face</mat-icon>
+        <span class="nav-caption">Signup</span>
+      </a>
+
+      <a mat-list-item routerLink="/login" (click)="sidenav.close()">
+        <mat-icon>account_box</mat-icon>
+        <span class="nav-caption">Login</span>
+      </a>
+
+      <mat-list-item>
+        <button mat-icon-button (click)="sidenav.close()">
+          <mat-icon>eject</mat-icon>
+          <span class="nav-caption">Logout</span>
+        </button>
+      </mat-list-item>
+
+    </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
 
-    <mat-toolbar color="primary" fxHide.gt-xs>
-      <div>
+    <mat-toolbar color="primary">
+      <div fxHide.gt-xs>
         <button 
         (click)="sidenav.toggle()"
         mat-icon-button>
@@ -27,6 +46,7 @@
         class="navigation-items">
           <li><a routerLink="/signup">Signup</a></li>
           <li><a routerLink="/login">Login</a></li>
+          <li><a>Logout</a></li>
         </ul>
       </div>
     </mat-toolbar>
