--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,3 +1,18 @@
-<div>
-  Welcome works!
+<div class="welcome" 
+fxLayout="column" 
+fxLayout.gt-md="row" 
+fxLayoutGap.gt-md="20px"
+fxLayoutAlign="center center">
+  <section>
+    <h1>Coaches</h1>
+    <p>Track each athlete's progress andrecord each jump.</p>
+  </section>
+  <section>
+    <h1>Athletes</h1>
+    <p>Review each training session.</p>
+  </section>
+  <section>
+    <h1>About this project</h1>
+    <p>© 2019 Nathan Strong</p>
+  </section>
 </div>
